# meowsic

./: EULA.md  README.md  TODO.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: publish.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/src/: commands.rs  db.rs  main.rs  players.rs  streaming.rs  tracks.rs  utils.rs
backend/src/sql/: init.sql
screenshots/: index.md
src/: artists.tsx  main.tsx  players.tsx  queue.tsx  settings.tsx  streaming.ts  utils.ts
src/components/: index.tsx  window.tsx
src/player/: index.ts
src/playlists/: components.tsx
src/streaming/: components.tsx  index.ts
src/tracks/: index.ts
src/tracks/components/: details.tsx  index.tsx
